testsuite/poke.pkl/in-diag-2.pk
/* { dg-do compile } */

var foo = [1,2,3] in
                  "foo"; /* { dg-error "invalid operand.*\n.*expected array" } */
